--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Face to Face Your TV</title>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/uk_UA/sdk.js#xfbml=1&version=v19.0"
+    nonce="MKtrWnzu"></script>
 </head>
 
 <body>
